# ecia-labels

./: .gitignore  MANIFEST.in  README.md  generate_label.py  layout_logistic_custom.json  logistic.json  product.json  pyproject.toml  requirements.txt
ecia_labels/: __init__.py  __main__.py  barcodes.py  cli.py  datamatrix.py  layout.py  production.py  spec.py  validate.py  verify.py
labels/: logistic_multiple.csv  logistic_multiple.html
samples/: layout_product_custom.json  logistic_multiple.json
